[package]
name = "cvi-rs"
version = "0.1.0"
authors = ["immortal infidel <immortal.infidel@gmail.com>"]
edition = "2018"
license="MIT"
description="Chaikins Volatility (CVI) Implementation In Rust"
repository="https://github.com/immortalinfidel/cvi-rs"
homepage="https://github.com/immortalinfidel/cvi-rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ta-common = { version="0.1.2"}
ema-rs = { version="0.1.0"}
